--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -13,6 +13,7 @@
     margin:0;
     font-size:20px;
     color:#022e52;
+    font-weight: normal;
 }
 
 .content-wrapper h1 a {
@@ -38,6 +39,15 @@
     padding: 10px;
     border: 1px solid #d3d3d3;
     vertical-align: top;
+}
+
+.content-wrapper .event-wrapper .event-photo.multiday {
+    min-height: 291px;
+    vertical-align: middle;
+}
+
+.content-wrapper .event-wrapper .event-photo.multiday #photoFancy {
+    margin-top: 15px;
 }
 
 .content-wrapper .event-wrapper .event-photo #photoFancy {
@@ -90,12 +100,12 @@
     color: #247cc3;
     margin-top: 7px;
     margin-left: 30px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .content-wrapper .event-details .event-description {
     margin-top: 11px;
-    font-weight: bold;
+    font-weight: normal;
     margin-left: 30px;
 }
 
@@ -104,7 +114,7 @@
     color: #06c;
     font-size: 1.0em;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .content-wrapper .event-details .title-wrapper {
@@ -119,7 +129,7 @@
     color: #ff6601;
     padding-left: 30px;
     font-size: 1.1em;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .content-wrapper .event-details .event-price.short {
