--- a/alpha/cityfusion_admin/templates/actions/actions.html
+++ b/alpha/cityfusion_admin/templates/actions/actions.html
@@ -4,14 +4,26 @@
 	<a href="{% url 'event_edit' event.authentication_key %}">Edit</a>
 	<a href="{% url 'event_remove' event.authentication_key %}" class="danger-action">Remove</a>	
 	<a href="{% url 'admin_setup_featured' event.event_identifier %}">Make featured</a>
-    {% if event.owner.id == request.user.id and not event.facebook_event %}
-        <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
+    {% if event.owner.id == request.user.id %}
+        {% if not event.facebook_event %}
+            <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
+        {% else %}
+            <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/" target="_blank">
+                View the FB event
+            </a>
+        {% endif %}
     {% endif %}
 </div>
 {% endif %}
 
-{% if not request.user.is_staff and event.owner.id == request.user.id and not event.facebook_event %}
+{% if not request.user.is_staff and event.owner.id == request.user.id %}
     <div class="cfadmin-actions">
-        <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
+        {% if not event.facebook_event %}
+            <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
+        {% else %}
+            <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/" target="_blank">
+                View the FB event
+            </a>
+        {% endif %}
     </div>
 {% endif %}
