--- a/alpha/advertising/templates/advertising/stats/stats.html
+++ b/alpha/advertising/templates/advertising/stats/stats.html
@@ -19,11 +19,13 @@
                 <tr>
                     <td>Ended:</td>
                     <td data-stat-key="ended">
-                        {% if ad.campaign.ended %}
-                            {{ ad.campaign.ended|date:"b j, Y"|capfirst }}
+                        {% if campaign.is_finished %}
+                            Finished
+                        {% elif campaign.active_to %}
+                            {{ campaign.active_to|date:"b j, Y"|capfirst }}
                         {% else %}
                             Ongoing
-                        {% endif %}  
+                        {% endif %}
                     </td>
                 </tr>
                 <tr>
