--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
@@ -48,6 +48,11 @@
                                     {% endfor %}
                                 </li>
                                 <li id="all-info">
+                                    {% for error in form.active_to.errors %}
+                                        <span class="error">{{ error }}</span>
+                                    {% endfor %}
+                                </li>
+                                <li id="all-info">
                                     {% for error in form.website.errors %}
                                         <span class="error">{{ error }}</span>
                                     {% endfor %}
@@ -72,6 +77,13 @@
                             Campaign website URL
                             {{ form.website }}
                         </div>
+
+                        <div class="campaign-active-to">
+                            Will be active till
+                            {{ form.active_to }}
+                        </div>
+
+
 
                         {% setup_advertising_types %}
                         {% setup_advertising_upload %}
