correcting a posting to the FB

--- a/alpha/cityfusion_admin/templates/actions/actions.html
+++ b/alpha/cityfusion_admin/templates/actions/actions.html
@@ -9,7 +9,7 @@
                 <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
             {% else %}
                 <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/" target="_blank">
-                    View the FB event
+                    View on the Facebook
                 </a>
             {% endif %}
         {% endif %}
