Add text-overflow ellipsis for long headers on detail view page

--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -21,6 +21,11 @@
 
 .content-wrapper h1 a {
     color:#022e52;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
 .content-wrapper .content {
