--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -154,6 +154,7 @@
     width: 100%;
     border-spacing:0;
     border-collapse:collapse;
+    border-top: 1px solid #ddd;
 }
 
 .content-wrapper .event-details .event-actions td {
