Fix recently featured and random filter in searchpad popup

--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -8,7 +8,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}">
+                <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}" class="ajax">
                     Random
                 </a>
             </li>
@@ -26,7 +26,7 @@
                 {%endfor%}
             </ul>
             <li>
-                <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}">
+                <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}" class="ajax">
                     Recently Featured
                 </a>
             </li>
